--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
-            <div class="home_mini"></div>
+            <a class="home_mini" href="index.html"></a>
             <div class="menu_mini_wrap">
                 <div class="menu_mini_icon"></div>
                 <ul class="menu_mini">
@@ -182,6 +182,6 @@
             </div>
         </footer>
     </div>
-    <sciprt src="js/common.js"></sciprt>
+    <script src="js/common.js"></script>
 </body>
 </html>
