animation and responsive code added

--- a/index.html
+++ b/index.html
@@ -45,14 +45,26 @@
             </p>
             <div class="gallery">
                 <div class="gallery1_wrap">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <img src="images/gallery_img1.png" alt="gallery image 1"/>
+                    </div>
+                    <div>
+                        <img src="images/gallery_img2.png" alt="gallery image 2"/>
+                    </div>
+                    <div>
+                        <img src="images/gallery_img3.png" alt="gallery image 3"/>
+                    </div>
                 </div>
                 <div class="gallery2_wrap">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <img src="images/gallery_img4.png" alt="gallery image 4"/>
+                    </div>
+                    <div>
+                        <img src="images/gallery_img5.png" alt="gallery image 5"/>
+                    </div>
+                    <div>
+                        <img src="images/gallery_img6.png" alt="gallery image 6"/>
+                    </div>
                 </div>
             </div>
         </section>
@@ -142,46 +154,52 @@
                     </div>
                 </div>
             </div>
-            <div class="group5_img"></div>
-        </section>
-        <footer>
-            <div class="footer_wrap">
-                <div class="footer_logo"></div>
-                <p class="footer_text">WEDDING WEBSITE 2020</p>
-                <div class="sign_up_box">
-                    <input type="text" placeholder="Email Adress">
-                    <button>SIGN UP</button>
-                </div>
-                <ul class="social">
-                    <li>
-                        <a href="#">
-                            <img src="images/facebook.png" alt="facebook"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/instagram.png" alt="instagram"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/twitter.png" alt="twitter"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/youtube.png" alt="youtube"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/snapchat.png" alt="snapchat"/>
-                        </a>
-                    </li>
-                </ul>
+            <div class="group5_img_wrapper">
+                <div class="group5_img"></div>
+                <div class="group5_img_shader"></div>
             </div>
-        </footer>
+        </section>
+        <div class="top_icon_wrapper">
+            <span class="go_top"></span>
+        </div>
     </div>
-    <script src="js/common.js"></script>
+    <footer>
+        <div class="footer_wrap">
+            <div class="footer_logo"></div>
+            <p class="footer_text">WEDDING WEBSITE 2020</p>
+            <div class="sign_up_box">
+                <input type="text" placeholder="Email Adress">
+                <button>SIGN UP</button>
+            </div>
+            <ul class="social">
+                <li>
+                    <a href="#">
+                        <img src="images/facebook.png" alt="facebook"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/instagram.png" alt="instagram"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/twitter.png" alt="twitter"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/youtube.png" alt="youtube"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/snapchat.png" alt="snapchat"/>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
