footer animation added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Little Wings</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/keyframes.css">
     <link rel="stylesheet" href="css/media_screen.css">
 </head>
 <body>
