visual image animation, indicator added

--- a/index.html
+++ b/index.html
@@ -37,9 +37,19 @@
                 </ul>
             </div>
         </div>
-        <div class="main_visual"></div>
+        <div class="main_visual_wrapper">
+            <div class="main_visual"></div>
+            <div class="main_visual"></div>
+            <div class="main_visual"></div>
+            <div class="progress_bar_wrapper">
+                <span class="progress_bar"></span>
+                <span class="progress_bar"></span>
+                <span class="progress_bar"></span>
+            </div>
+        </div>
     </header>
     <div class="content">
+        <div class="indicator"></div>
         <section class="group1">
             <p class="conetent_description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
