--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/keyframes.css">
     <link rel="stylesheet" href="css/media_screen.css">
+    <link rel="shortcut icon" href="ico/favicon.ico">
 </head>
 <body>
     <header>
