h1 hide tag added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 </a>
             </h1>
             <nav>
+                <h1 class="hide">main menu</h1>
                 <ul class="main_menu">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
@@ -50,8 +51,10 @@
         </div>
     </header>
     <div class="content">
+        <h1 class="hide">contents</h1>
         <div class="indicator"></div>
         <section class="group1">
+            <h1 class="hide">section 1</h1>
             <p class="conetent_description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
             </p>
@@ -81,6 +84,7 @@
             </div>
         </section>
         <section class="group2">
+            <h1 class="hide">section 2</h1>
             <div class="group2_text_box">
                 <div class="left_wrapper">
                     <div class="left">
@@ -97,6 +101,7 @@
             </div>
         </section>
         <section class="group3">
+            <h1 class="hide">section 3</h1>
             <div class="group3_text_box">
                 <p class="group3_title">Nature is above all</p>
                 <p class="group3_description">
@@ -149,6 +154,7 @@
             </ul>
         </section>
         <section class="group4">
+            <h1 class="hide">section 4</h1>
             <div class="group4_text_box">
                 <p class="group4_text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
@@ -157,6 +163,7 @@
             </div>
         </section>
         <section class="group5">
+            <h1 class="hide">section 5</h1>
             <div class="group5_text_box_wrap">
                 <div class="group5_logo"></div>
                 <div class="group5_text_box_wrap2">
