web accessibility modified

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
                 </a>
             </h1>
             <nav>
-                <h1 class="hide">main menu</h1>
+                <h2 class="hide">main menu</h2>
                 <ul class="main_menu">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
@@ -51,10 +51,9 @@
         </div>
     </header>
     <div class="content">
-        <h1 class="hide">contents</h1>
         <div class="indicator"></div>
         <section class="group1">
-            <h1 class="hide">section 1</h1>
+            <h2 class="hide">section 1</h2>
             <p class="conetent_description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
             </p>
@@ -84,7 +83,7 @@
             </div>
         </section>
         <section class="group2">
-            <h1 class="hide">section 2</h1>
+            <h2 class="hide">section 2</h2>
             <div class="group2_text_box">
                 <div class="left_wrapper">
                     <div class="left">
@@ -101,7 +100,7 @@
             </div>
         </section>
         <section class="group3">
-            <h1 class="hide">section 3</h1>
+            <h2 class="hide">section 3</h2>
             <div class="group3_text_box">
                 <p class="group3_title">Nature is above all</p>
                 <p class="group3_description">
@@ -154,7 +153,7 @@
             </ul>
         </section>
         <section class="group4">
-            <h1 class="hide">section 4</h1>
+            <h2 class="hide">section 4</h2>
             <div class="group4_text_box">
                 <p class="group4_text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
@@ -163,7 +162,7 @@
             </div>
         </section>
         <section class="group5">
-            <h1 class="hide">section 5</h1>
+            <h2 class="hide">section 5</h2>
             <div class="group5_text_box_wrap">
                 <div class="group5_logo"></div>
                 <div class="group5_text_box_wrap2">
