css validator mark added

--- a/index.html
+++ b/index.html
@@ -216,6 +216,18 @@
                     </a>
                 </li>
             </ul>
+            <div class="css_vaildator">
+                <p>
+                    <a href="https://validator.w3.org/unicorn/check?ucn_uri=https%3A%2F%2Fjaicychoi.github.io%2Fwedding%2F&ucn_task=conformance#">
+                        <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+                    </a>
+                </p>
+                <p>
+                    <a href="https://validator.w3.org/unicorn/check?ucn_uri=https%3A%2F%2Fjaicychoi.github.io%2Fwedding%2F&ucn_task=conformance#">
+                        <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!">
+                    </a>
+                </p>
+            </div>
         </div>
     </footer>
     <script src="js/main.js"></script>
