--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <h2 class="hide">main menu</h2>
                 <ul class="main_menu">
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li></li>
                     <li><a href="#">SHOP</a></li>
@@ -32,7 +32,7 @@
             <div class="menu_mini_wrap">
                 <div class="menu_mini_icon"></div>
                 <ul class="menu_mini">
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">SHOP</a></li>
                     <li><a href="#">CONTACT</a></li>
