--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
             </ul>
             <div class="css_vaildator">
                 <p>
-                    <a href="https://validator.w3.org/unicorn/check?ucn_uri=https%3A%2F%2Fjaicychoi.github.io%2Fwedding%2F&ucn_task=conformance#">
+                    <a href="https://validator.w3.org/unicorn/check?ucn_uri=https%3A%2F%2Fjaicychoi.github.io%2Fwedding%2F&ucn_task=conformance#" target="_blank">
                         <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
                     </a>
                 </p>
                 <p>
-                    <a href="https://validator.w3.org/unicorn/check?ucn_uri=https%3A%2F%2Fjaicychoi.github.io%2Fwedding%2F&ucn_task=conformance#">
+                    <a href="https://validator.w3.org/unicorn/check?ucn_uri=https%3A%2F%2Fjaicychoi.github.io%2Fwedding%2F&ucn_task=conformance#" target="_blank">
                         <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!">
                     </a>
                 </p>
